// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SwitchDataSource should render the button disabled 1`] = `
<DocumentFragment>
  <form
    action="/api/switchDataSource?_csrf=token"
    method="post"
  >
    <input
      name="referer"
      type="hidden"
      value="/service"
    />
    <input
      name="attributeVersion"
      type="hidden"
      value="baseOperator"
    />
    <button
      class="govuk-button govuk-button--secondary"
      disabled=""
      id="change-data-source"
      type="submit"
    >
      Change TransXChange data source to TNDS
    </button>
  </form>
</DocumentFragment>
`;

exports[`SwitchDataSource should render the button not disabled 1`] = `
<DocumentFragment>
  <form
    action="/api/switchDataSource?_csrf=token"
    method="post"
  >
    <input
      name="referer"
      type="hidden"
      value="/service"
    />
    <input
      name="attributeVersion"
      type="hidden"
      value="baseOperator"
    />
    <button
      class="govuk-button govuk-button--secondary"
      id="change-data-source"
      type="submit"
    >
      Change TransXChange data source to TNDS
    </button>
  </form>
</DocumentFragment>
`;
